tests/ui/diagnostic-width/long-span.shortest.stderr
error[E0369]: cannot add `[{integer}; 1680]` to `[{integer}; 1680]`
  --> $DIR/long-span.rs:7:5056
   |
LL | ... = [0, 0, 0...0] + [0, 0, 0...0];
   |       --------...-- ^ --------...-- [{integer}; 1680]
   |       |
   |       [{integer}; 1680]

error[E0308]: mismatched types
  --> $DIR/long-span.rs:9:15
   |
LL | ... = [0, 0, 0...0];
   |       ^^^^^^^^...^^ expected `u8`, found `[{integer}; 1680]`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
